- Removed genetator metatag from tidy output (JoeW).
- Disabled Leanify, and PNGout for APNG because the broke optimized files in some cases (Folding Home).
- Disabled ImageWorsener for WEBP, because it is not lossless (Skibicki #9).
- Added EPRT extension (Solid Works) to ZIP chain (maadjordan).
- Updated donation button to use Paypal.me so it can accept different currencies that euros (JoeW).
- Updated to ECT 0.4 x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated ImageMagick 7.0.1.5 with HDRI support.
- Updated to NSIS 3.0 RC1.
- Updated to cppcheck 1.74.


8.30 - 2016/04/30
- Added UPX to the EXE/DLL tool chain (guindos98, necros).
- Added INI setting bEXEEnableUPX=false to enable UPX EXE compression. For instance bEXEEnableUPX=true will enable UPX processing (guindos98, necros).
- Added INI setting LeanifyIterations=-1 to specify desired Leanify iterations independantly of the compression level. For instance LeanifyIterations=128 will instruct Leanify to always use 128 iterations (necros).
- Added stereo extensions: MPO (Multi Picture Object), PNS (PNG Stereo) and JPS (JPEG Stereo).
- Added LXF extension (Lego Digital Designer) to ZIP chain (Jaff).
- Tweaked ECT invoking to make it get better compression ratios (Jaff).
- Fixed ECT execution it does not use -Mx but -x instead (fhanau).
- Fixed disable ZIP recurse handling in Leanify (Jaff).
- Fixed an Embarcadero's VCL bug that caused view modes in add files Windows common dialog show strange strings (JoeW).
- Removed crop-transparency from gifsicle arguments, since it can downsize resulting GIF image, and thus not being lossless (Austin Donisan).
- Disable TruePNG on ICO files because it crashes (TPS).
- Avoid using Advzip on SFX ZIP files due to header being removed (Jaff).
- Updated AdvanceCOMP to 1.20 (Jaff). 
- Updated Leanify to 0.4.3.103 daily binaries.
- Updated pngquant to 2.5.2.
- Updated TruePNG to 0.6.2.2.
- Updated strip to 2.26.